--- a/Scripts/Game/Visual Studio/Ellerargen/Ellerargen/Ellerargen.vcxproj.filters
+++ b/Scripts/Game/Visual Studio/Ellerargen/Ellerargen/Ellerargen.vcxproj.filters
@@ -103,7 +103,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MainMission.cpp">
+    <ClCompile Include="Mission01">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
